Article source links overflow on mobile fix

--- a/themes/gv_sky/css/sass/_parts_blog/article-body.sass
+++ b/themes/gv_sky/css/sass/_parts_blog/article-body.sass
@@ -358,6 +358,10 @@
 							strong
 								font-weight: 700
 
+		ol
+			max-width: 100%
+			overflow: scroll
+
 		textarea
 			display: block
 			width: 100%
